Changes in UI, Changes in Ux, Appbars, And Animations

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -16,5 +16,6 @@
     "french": "الفرنسية",
     "arabic": "العربية",
     "islamicEducation": "التربية الإسلامية",
-    "artEducation": "التربية الفنية"
+    "artEducation": "التربية الفنية",
+  "great_job" : "عمل رائع! أكملت جميع الأقسام"
 }
