--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,5 +15,6 @@
     "french": "French",
     "arabic": "Arabic",
     "islamicEducation": "Islamic Education",
-    "artEducation": "Artistic Education"
+    "artEducation": "Artistic Education",
+  "great_job" : "Great job! You have completed all sections"
 }
