--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -16,6 +16,7 @@
       "french": "Français",
       "arabic": "Arabe",
       "islamicEducation": "Éducation Islamique",
-      "artEducation": "Éducation Artistique"
+      "artEducation": "Éducation Artistique",
+  "great_job": "Super travail ! Vous avez terminé toutes les sections"
 }
 
