--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -16,5 +16,6 @@
   "french": "Francese",
   "arabic": "Arabo",
   "islamicEducation": "Educazione Islamica",
-  "artEducation": "Educazione Artistica"
+  "artEducation": "Educazione Artistica",
+  "great_job" : "Ottimo lavoro! Hai completato tutte le sezioni"
 }
