--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -17,5 +17,12 @@
   "arabic": "Arabo",
   "islamicEducation": "Educazione Islamica",
   "artEducation": "Educazione Artistica",
-  "great_job" : "Ottimo lavoro! Hai completato tutte le sezioni"
+  "great_job" : "Ottimo lavoro! Hai completato tutte le sezioni",
+  "enterYourName": "Inserisci il tuo nome",
+  "cancel": "Annulla",
+  "ok": "OK",
+  "pleaseEnterName": "Per favore inserisci un nome",
+  "selectGameMode": "Seleziona modalità di gioco",
+  "singlePlayer": "Giocatore singolo",
+  "multiplayer": "Multigiocatore"
 }
