Hezz2Game/ UnoGame/ MazeGame/ LinkColorGame

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -112,6 +112,17 @@
   "loadingPhrase9": "تمسك، القط يصحح الكود!",
   "loadingPhrase10": "مروو! اقتربنا من الانتهاء!",
 
+   "motivationalPhrase1": "أنت رائع!",
+    "motivationalPhrase2": "استمر أيها البطل الصغير!",
+    "motivationalPhrase3": "الأحلام الكبيرة تبدأ صغيرة.",
+    "motivationalPhrase4": "كل يوم مغامرة جديدة!",
+    "motivationalPhrase5": "كن طيبًا، شجاعًا، وكن نفسك!",
+    "motivationalPhrase6": "التعلم هو قوتك الخارقة!",
+    "motivationalPhrase7": "تألّق أكثر كل يوم!",
+    "motivationalPhrase8": "الأخطاء تصنع السحر!",
+    "motivationalPhrase9": "آمن ببريقك!",
+    "motivationalPhrase10": "نمُ، العب، وابتسم!",
+
   "this_avatar_is_locked_unlock_it_in_the": "هذه الصورة الرمزية مقفلة. قم بفتحها في",
   "shop" : "متجر",
 
