--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -109,6 +109,17 @@
   "loadingPhrase9": "Warte, das Kätzchen debuggt den Code!",
   "loadingPhrase10": "Mrrrow! Fast fertig!",
 
+    "motivationalPhrase1": "Du bist großartig!",
+    "motivationalPhrase2": "Mach weiter, kleiner Held!",
+    "motivationalPhrase3": "Große Träume fangen klein an.",
+    "motivationalPhrase4": "Jeder Tag ist ein neues Abenteuer!",
+    "motivationalPhrase5": "Sei freundlich, mutig und du selbst!",
+    "motivationalPhrase6": "Lernen ist deine Superkraft!",
+    "motivationalPhrase7": "Glänze jeden Tag ein bisschen mehr!",
+    "motivationalPhrase8": "Fehler machen Magie möglich!",
+    "motivationalPhrase9": "Glaube an deinen Funken!",
+    "motivationalPhrase10": "Wachse, spiele und lächle!",
+
   "this_avatar_is_locked_unlock_it_in_the": "Dieser Avatar ist gesperrt. Schalte ihn frei im",
   "shop": "Shop",
 
