--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -113,6 +113,17 @@
   "loadingPhrase9": "Hang on, kitty’s debugging the code!",
   "loadingPhrase10": "Mrrrow! Almost done!",
 
+   "motivationalPhrase1": "You are amazing!",
+   "motivationalPhrase2": "Keep going, little hero!",
+   "motivationalPhrase3": "Big dreams start small.",
+   "motivationalPhrase4": "Every day is an adventure!",
+   "motivationalPhrase5": "Be kind, be brave, be you!",
+   "motivationalPhrase6": "Learning is your superpower!",
+   "motivationalPhrase7": "Shine brighter every day!",
+   "motivationalPhrase8": "Mistakes make magic happen!",
+   "motivationalPhrase9": "Believe in your sparkle!",
+   "motivationalPhrase10": "Grow, play, and smile!",
+
   "this_avatar_is_locked_unlock_it_in_the": "This avatar is locked. Unlock it in the",
   "shop" : "Shop",
 
