--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -113,6 +113,17 @@
   "loadingPhrase9": "Attendez, le chat débogue le code !",
   "loadingPhrase10": "Mrrrow ! Presque fini !",
 
+    "motivationalPhrase1": "Tu es incroyable !",
+    "motivationalPhrase2": "Continue, petit héros !",
+    "motivationalPhrase3": "Les grands rêves commencent petits.",
+    "motivationalPhrase4": "Chaque jour est une aventure !",
+    "motivationalPhrase5": "Sois gentil, courageux et reste toi-même !",
+    "motivationalPhrase6": "Apprendre est ton super pouvoir !",
+    "motivationalPhrase7": "Brille un peu plus chaque jour !",
+    "motivationalPhrase8": "Les erreurs créent de la magie !",
+    "motivationalPhrase9": "Crois en ton éclat !",
+    "motivationalPhrase10": "Grandis, joue et souris !",
+
   "this_avatar_is_locked_unlock_it_in_the": "Cet avatar est verrouillé. Déverrouillez-le dans la",
   "shop" : "Boutique",
 
