--- a/lib/l10n/app_zgh.arb
+++ b/lib/l10n/app_zgh.arb
@@ -113,6 +113,17 @@
     "loadingPhrase9": "ⵣⵓⵔⵓ، ⵓⵍⵉⵍⵉ ⵉⴷⴳⵉ ⵓⵏⴳⵎⵉⵔ!",
     "loadingPhrase10": "ⵎⵔⵔⵓⵡ! ⴰⵔ ⵜⴰⵎⵙⵎⵉⵔ!",
 
+  "motivationalPhrase1": "ⴰⵎⴰⵣⵉⵖ ⴰⵎⵣⵉⴷ!",
+  "motivationalPhrase2": "ⴰⵣⴳ ⵏ ⵢⵉⵏ ⵓⵏⴳ ⵓⴷⵍⴰⵏ!",
+  "motivationalPhrase3": "ⵉⵎⴰⵣⵉⵖ ⵉⵎⵣⵓⵍⵍ ⵢⴰⴼ ⴰⵣⵓⵏⵏ.",
+  "motivationalPhrase4": "ⴷ ⵉⴷ ⴰⵎⵙⵙⴰⵍ ⴰⵏⴷⵏ ⵢⴰⴷ!",
+  "motivationalPhrase5": "ⴰⴳⵯⴰⴷ, ⴰⵏⵓⴷ ⵓⵙ ⵉⵎⵣⵉⵖ!",
+  "motivationalPhrase6": "ⴰⵙⴷⵉⴷ ⵏ ⵉⵎⵣⵉⵖ ⵢⴰⵎⵣⵓⵍ ⴰⵎⵣⵉⵖ!",
+  "motivationalPhrase7": "ⵎⵣⵓⵍ ⴰⵙⵍⵍⵉ ⴰⴷ ⴷⵓⴷ ⵢⴰⵎⵣⵓⵍ!",
+  "motivationalPhrase8": "ⵉⵏⵓⵙⵙⵉ ⵏ ⴰⵎⵣⵓⵍ ⵉⵎⵣⵓⵍ!",
+  "motivationalPhrase9": "ⴰⵏⴳ ⵏ ⵉⵎⵣⵓⵍ ⵢⴰⴷ!",
+  "motivationalPhrase10": "ⵣⴰⵍ, ⴰⵎⵣⵉⵖ, ⵓⵙ ⵓⴷⵍⴰⵏ!",
+
     "this_avatar_is_locked_unlock_it_in_the": "ⴰⴼⴰⵜⴰⵔ ⴰⵎⴰⵣⵉⵖ ⵓⵔ ⵉⵙⴽⵔⴼ. ⵙⵔⵙⴽⵔⴼⴻⵏ ⴳ",
     "shop": "ⵜⵓⵙⴽⵔⴼⵜ",
 
